--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -31,5 +31,15 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script>
+        ResizeTextArea = function (id) {
+            var el = document.getElementById(id);
+            if (el) {
+                el.style.height = "5px";
+                el.style.height = (el.scrollHeight + 5) + "px";
+            }
+            return true;
+        }
+    </script>
 </body>
 </html>
