--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Karty
             </NavLink>
         </li>
+                <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Add">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Add
+            </NavLink>
+        </li>
     </ul>
 </div>
 
