--- a/Pages/Add.razor
+++ b/Pages/Add.razor
@@ -14,8 +14,8 @@
     <div class="col-xs-6 col-sm-3 col-md-3">
 <table>
 <textarea 
-  class="form-control" maxlength="255" style="width:600px;"
-  @bind="zoznam" id="Comments" required>
+  class="form-control" style="width:800px;"
+  @bind="zoznam"  required>
 </textarea>
 </table>
 </div>
