--- a/Pages/Find.razor
+++ b/Pages/Find.razor
@@ -16,12 +16,6 @@
 </div>
 </div>
 <center>
-<select name="Zdroj" @onchange="Changed">
-    @foreach(var file in files)
-    {
-        <option value = "@file"> @file.Substring(file.IndexOf('\\')+1) </option >
-    }
-</select>
 <button @onclick="FindCards" style="display: inline-block;">Find</button>
 <br>
 Cards count: @count
@@ -141,7 +135,7 @@ else
     private async Task FindCards()
     {
         CurrentPage=1;
-        cards = await CardService.Search(!string.IsNullOrWhiteSpace(cardName) ? cardName : null);
+        //cards = await CardService.Search(!string.IsNullOrWhiteSpace(cardName) ? cardName : null);
        count=cards.Length; 
     }
 }
