--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -17,7 +17,7 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Karty
             </NavLink>
         </li>
-        <!--<li class="nav-item px-3">
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="Add">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Pridat nove karty
             </NavLink>
@@ -31,7 +31,7 @@
             <NavLink class="nav-link" href="Move">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Presun karty
             </NavLink>
-        </li>-->
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Baliky">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Baliky
